# perf_tools

./: .gitignore  AGENTS.md  BUILD  CMakeLists.txt  DESIGN.md  INTEGRATION_GUIDE.md  README.md
bcc_tools/: BCC_GUIDE.md  BUILD  bcc_manager.sh  funclatency.py  offcputime.py  profile.py  runqlat.py  syscount.py
cmake/: perf_toolsConfig.cmake.in
examples/: example_usage.cc
include/perf_tools/: perf_exporter.h  perf_subscriber.h  perf_types.h  tsc_calculator.h
src/: perf_exporter.cc  tsc_calculator.cc
tests/: perf_exporter_test.cc  perf_types_test.cc  tsc_calculator_test.cc
